--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -42,6 +42,8 @@
     <button type="submit">Lọc</button>
 </form>
 
+
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0QrIRQFbWviKCV4X8k8IjJ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   <h3 class="text-center mb-3">Sản phẩm phổ biến</h3>
   <div class="row gx-4 gy-4">
     {% for product in page_obj %}
