--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,7 @@
                                     <li><a class="dropdown-item" href="{% url 'register' %}">Đăng ký</a></li>
                                     <li><a class="dropdown-item" href="{% url 'login' %}">Đăng nhập</a></li>
                                     <li><a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'my_profile' %}">Hồ sơ cá nhân</a></li>
                                 </ul>
                             </div>
                             <a href="{% url 'cart' %}">
