--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                                     <i class="fa-solid fa-circle-user"></i>
                                 </button>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="{% url 'register' %}">Đăng ký</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'signup' %}">Đăng ký</a></li>
                                     <li><a class="dropdown-item" href="{% url 'login' %}">Đăng nhập</a></li>
                                     <li><a class="dropdown-item" href="{% url 'logout' %}">Đăng xuất</a></li>
                                     <li><a class="dropdown-item" href="{% url 'my_profile' %}">Hồ sơ cá nhân</a></li>
